--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link href="./css/index.styl" rel="stylesheet" />
   </head>
   <body>
-    <h1>Tinker Template</h1>
-    <script src="./js/index.ts"></script>
+    <div id="root"></div>
+    <script src="./js/index.tsx"></script>
   </body>
 </html>
